--- a/gulp-other/index.html
+++ b/gulp-other/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<!-- 测试sass编译 -->
 	<link rel="stylesheet" href="dist/css/aa/base2.css">
 </head>
-<body>
+<body style="height:2000px;">
 	<h1>header</h1>
 </body>
 </html>
